syntax = "proto3";

package session;

// LoginRequest description
message LoginRequest {
  string cookie = 1;       // required (if !email and !username)
  string username = 2;  // required (if !email)
  string email = 3;     // required (if !username)
  string password = 4;  // required password's hash
}

// GoogleLoginRequest description
message GoogleLoginRequest {
  string cookie = 1;
  string username = 2;  // required
  string email = 3;     // required
  string googleId = 4;  // required
  string imageUrl = 5;  // optional
}