syntax = "proto3";

package session;

// LogoutRequest description
message LogoutRequest {
  string key = 1; // required: identifies the user's session
}